deploy: 4c7eb27934598638103b2f97ba1f8dfd7f955801

--- a/volumes/vol4-prediction/19-zodiacal-releasing.html
+++ b/volumes/vol4-prediction/19-zodiacal-releasing.html
@@ -251,13 +251,13 @@ ul.task-list li input[type="checkbox"] {
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../../volumes/vol5-applied/22-natal.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Natal Practice</span></span></a>
+ <span class="menu-text"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Advanced Natal and Synastry</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../../volumes/vol5-applied/23-electional.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Astrology</span></span></a>
+ <span class="menu-text"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Protocols</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
@@ -924,8 +924,8 @@ ul.task-list li input[type="checkbox"] {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="../../volumes/vol5-applied/22-natal.html" class="pagination-link" aria-label="Natal Practice">
-        <span class="nav-page-text"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Natal Practice</span></span> <i class="bi bi-arrow-right-short"></i>
+      <a href="../../volumes/vol5-applied/22-natal.html" class="pagination-link" aria-label="Advanced Natal and Synastry">
+        <span class="nav-page-text"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Advanced Natal and Synastry</span></span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
