--- a/volumes/vol5-applied/22-natal.html
+++ b/volumes/vol5-applied/22-natal.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>14&nbsp; Natal Practice – The Celestial Curia</title>
+<title>14&nbsp; Advanced Natal and Synastry – The Celestial Curia</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -83,7 +83,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" role="button" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html">Volume V: Applied Astrology and Theurgy</a></li><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Natal Practice</span></a></li></ol></nav>
+        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html">Volume V: Applied Astrology and Theurgy</a></li><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Advanced Natal and Synastry</span></a></li></ol></nav>
         <a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
         </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -251,13 +251,13 @@ ul.task-list li input[type="checkbox"] {
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../../volumes/vol5-applied/22-natal.html" class="sidebar-item-text sidebar-link active">
- <span class="menu-text"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Natal Practice</span></span></a>
+ <span class="menu-text"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Advanced Natal and Synastry</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../../volumes/vol5-applied/23-electional.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Astrology</span></span></a>
+ <span class="menu-text"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Protocols</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
@@ -307,16 +307,22 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#under-construction" id="toc-under-construction" class="nav-link active" data-scroll-target="#under-construction"><span class="header-section-number">14.1</span> Under Construction</a></li>
+  <li><a href="#i.-synastry-overlay-mechanics-the-almuten-to-hyleg-bridge" id="toc-i.-synastry-overlay-mechanics-the-almuten-to-hyleg-bridge" class="nav-link active" data-scroll-target="#i.-synastry-overlay-mechanics-the-almuten-to-hyleg-bridge"><span class="header-section-number">14.1</span> I. Synastry Overlay Mechanics: The Almuten-to-Hyleg Bridge</a>
+  <ul class="collapse">
+  <li><a href="#foundational-principle" id="toc-foundational-principle" class="nav-link" data-scroll-target="#foundational-principle"><span class="header-section-number">14.1.1</span> Foundational Principle</a></li>
+  <li><a href="#computational-algorithm" id="toc-computational-algorithm" class="nav-link" data-scroll-target="#computational-algorithm"><span class="header-section-number">14.1.2</span> Computational Algorithm</a></li>
+  <li><a href="#asymmetry-recognition" id="toc-asymmetry-recognition" class="nav-link" data-scroll-target="#asymmetry-recognition"><span class="header-section-number">14.1.3</span> Asymmetry Recognition</a></li>
+  <li><a href="#hierarchical-filtering" id="toc-hierarchical-filtering" class="nav-link" data-scroll-target="#hierarchical-filtering"><span class="header-section-number">14.1.4</span> Hierarchical Filtering</a></li>
+  </ul></li>
   </ul>
 <div class="toc-actions"><ul><li><a href="https://github.com/celestial-curia/master-book/edit/main/volumes/vol5-applied/22-natal.qmd" class="toc-action"><i class="bi bi-github"></i>Edit this page</a></li><li><a href="https://github.com/celestial-curia/master-book/issues/new" class="toc-action"><i class="bi empty"></i>Report an issue</a></li></ul></div></nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
-<header id="title-block-header" class="quarto-title-block default"><nav class="quarto-page-breadcrumbs quarto-title-breadcrumbs d-none d-lg-block" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html">Volume V: Applied Astrology and Theurgy</a></li><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Natal Practice</span></a></li></ol></nav>
+<header id="title-block-header" class="quarto-title-block default"><nav class="quarto-page-breadcrumbs quarto-title-breadcrumbs d-none d-lg-block" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html">Volume V: Applied Astrology and Theurgy</a></li><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Advanced Natal and Synastry</span></a></li></ol></nav>
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Natal Practice</span></h1>
+<h1 class="title"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Advanced Natal and Synastry</span></h1>
 </div>
 
 
@@ -333,14 +339,67 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<blockquote class="blockquote">
-<p>[!NOTE] General synthesis chapter.</p>
-</blockquote>
-<section id="under-construction" class="level2" data-number="14.1">
-<h2 data-number="14.1" class="anchored" data-anchor-id="under-construction"><span class="header-section-number">14.1</span> Under Construction</h2>
-<p>This chapter is currently being drafted.</p>
+<section id="i.-synastry-overlay-mechanics-the-almuten-to-hyleg-bridge" class="level2" data-number="14.1">
+<h2 data-number="14.1" class="anchored" data-anchor-id="i.-synastry-overlay-mechanics-the-almuten-to-hyleg-bridge"><span class="header-section-number">14.1</span> I. Synastry Overlay Mechanics: The Almuten-to-Hyleg Bridge</h2>
+<section id="foundational-principle" class="level3" data-number="14.1.1">
+<h3 data-number="14.1.1" class="anchored" data-anchor-id="foundational-principle"><span class="header-section-number">14.1.1</span> Foundational Principle</h3>
+<p>When Person A’s Almuten Figuris (most dignified planet) aspects or conjoins Person B’s Hyleg (life-giving point), Person A’s essential governing force directly influences the vitality and life direction of Person B.</p>
+</section>
+<section id="computational-algorithm" class="level3" data-number="14.1.2">
+<h3 data-number="14.1.2" class="anchored" data-anchor-id="computational-algorithm"><span class="header-section-number">14.1.2</span> Computational Algorithm</h3>
+<p><strong>Step 1:</strong> Calculate both charts completely: - Person A’s Almuten via point-scoring system - Person B’s Hyleg via hierarchical protocol (Sun/Moon in angles → Ascendant → Part of Fortune)</p>
+<p><strong>Step 2:</strong> Assess the aspect relationship:</p>
+<table class="caption-top table">
+<thead>
+<tr class="header">
+<th>Aspect</th>
+<th>Base Value</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Conjunction</td>
+<td>+5</td>
+</tr>
+<tr class="even">
+<td>Trine/Sextile</td>
+<td>+3</td>
+</tr>
+<tr class="odd">
+<td>No aspect</td>
+<td>0</td>
+</tr>
+<tr class="even">
+<td>Square</td>
+<td>-2</td>
+</tr>
+<tr class="odd">
+<td>Opposition</td>
+<td>-1</td>
+</tr>
+</tbody>
+</table>
+<p><strong>Step 3:</strong> Apply modifiers:</p>
+<pre><code>Almuten-Hyleg Strength = 
+    Aspect_Value
+  + (Almuten_Dignity_Score ÷ 10)      [yields 0 to +2.5]
+  + Almuten_House_Modifier            [angular +2, succedent +1, cadent -1]
+  + Hyleg_House_Modifier              [angular +2, succedent +1, cadent -1]
+  + Reception_Bonus                   [+1.5 if Almuten in Hyleg's sign dignity]</code></pre>
+<p><strong>Final Range:</strong> -2 to +14 (scale to 0-100 for presentation)</p>
+</section>
+<section id="asymmetry-recognition" class="level3" data-number="14.1.3">
+<h3 data-number="14.1.3" class="anchored" data-anchor-id="asymmetry-recognition"><span class="header-section-number">14.1.3</span> Asymmetry Recognition</h3>
+<p>The software must calculate <strong>both directions</strong>: - Person A’s Almuten → Person B’s Hyleg (A vitalizes B) - Person B’s Almuten → Person A’s Hyleg (B vitalizes A)</p>
+<p>Present these separately to reveal power dynamics.</p>
+</section>
+<section id="hierarchical-filtering" class="level3" data-number="14.1.4">
+<h3 data-number="14.1.4" class="anchored" data-anchor-id="hierarchical-filtering"><span class="header-section-number">14.1.4</span> Hierarchical Filtering</h3>
+<p>Flag when either Hyleg is weak (determined only after Sun/Moon failed to qualify). The Almuten-Hyleg interaction carries greatest weight when both are strongly established.</p>
+<hr>
 
 
+</section>
 </section>
 
 </main> <!-- /main -->
@@ -751,8 +810,8 @@ ul.task-list li input[type="checkbox"] {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="../../volumes/vol5-applied/23-electional.html" class="pagination-link" aria-label="Electional Astrology">
-        <span class="nav-page-text"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Astrology</span></span> <i class="bi bi-arrow-right-short"></i>
+      <a href="../../volumes/vol5-applied/23-electional.html" class="pagination-link" aria-label="Electional Protocols">
+        <span class="nav-page-text"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Protocols</span></span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
