--- a/volumes/vol5-applied/23-electional.html
+++ b/volumes/vol5-applied/23-electional.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>15&nbsp; Electional Astrology – The Celestial Curia</title>
+<title>15&nbsp; Electional Protocols – The Celestial Curia</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -83,7 +83,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" role="button" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html">Volume V: Applied Astrology and Theurgy</a></li><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/23-electional.html"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Astrology</span></a></li></ol></nav>
+        <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html">Volume V: Applied Astrology and Theurgy</a></li><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/23-electional.html"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Protocols</span></a></li></ol></nav>
         <a class="flex-grow-1" role="navigation" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
         </a>
       <button type="button" class="btn quarto-search-button" aria-label="Search" onclick="window.quartoOpenSearch();">
@@ -251,13 +251,13 @@ ul.task-list li input[type="checkbox"] {
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../../volumes/vol5-applied/22-natal.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Natal Practice</span></span></a>
+ <span class="menu-text"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Advanced Natal and Synastry</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../../volumes/vol5-applied/23-electional.html" class="sidebar-item-text sidebar-link active">
- <span class="menu-text"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Astrology</span></span></a>
+ <span class="menu-text"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Protocols</span></span></a>
   </div>
 </li>
           <li class="sidebar-item">
@@ -307,16 +307,21 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#under-construction" id="toc-under-construction" class="nav-link active" data-scroll-target="#under-construction"><span class="header-section-number">15.1</span> Under Construction</a></li>
+  <li><a href="#ii.-electional-protocols-the-selection-algorithm" id="toc-ii.-electional-protocols-the-selection-algorithm" class="nav-link active" data-scroll-target="#ii.-electional-protocols-the-selection-algorithm"><span class="header-section-number">15.1</span> II. Electional Protocols: The Selection Algorithm</a>
+  <ul class="collapse">
+  <li><a href="#input-parameters-required" id="toc-input-parameters-required" class="nav-link" data-scroll-target="#input-parameters-required"><span class="header-section-number">15.1.1</span> Input Parameters Required</a></li>
+  <li><a href="#the-twelve-step-selection-algorithm" id="toc-the-twelve-step-selection-algorithm" class="nav-link" data-scroll-target="#the-twelve-step-selection-algorithm"><span class="header-section-number">15.1.2</span> The Twelve-Step Selection Algorithm</a></li>
+  <li><a href="#output-format" id="toc-output-format" class="nav-link" data-scroll-target="#output-format"><span class="header-section-number">15.1.3</span> Output Format</a></li>
+  </ul></li>
   </ul>
 <div class="toc-actions"><ul><li><a href="https://github.com/celestial-curia/master-book/edit/main/volumes/vol5-applied/23-electional.qmd" class="toc-action"><i class="bi bi-github"></i>Edit this page</a></li><li><a href="https://github.com/celestial-curia/master-book/issues/new" class="toc-action"><i class="bi empty"></i>Report an issue</a></li></ul></div></nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
-<header id="title-block-header" class="quarto-title-block default"><nav class="quarto-page-breadcrumbs quarto-title-breadcrumbs d-none d-lg-block" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html">Volume V: Applied Astrology and Theurgy</a></li><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/23-electional.html"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Astrology</span></a></li></ol></nav>
+<header id="title-block-header" class="quarto-title-block default"><nav class="quarto-page-breadcrumbs quarto-title-breadcrumbs d-none d-lg-block" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/22-natal.html">Volume V: Applied Astrology and Theurgy</a></li><li class="breadcrumb-item"><a href="../../volumes/vol5-applied/23-electional.html"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Protocols</span></a></li></ol></nav>
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Astrology</span></h1>
+<h1 class="title"><span class="chapter-number">15</span>&nbsp; <span class="chapter-title">Electional Protocols</span></h1>
 </div>
 
 
@@ -333,14 +338,203 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<blockquote class="blockquote">
-<p>[!NOTE] Content pending migration.</p>
-</blockquote>
-<section id="under-construction" class="level2" data-number="15.1">
-<h2 data-number="15.1" class="anchored" data-anchor-id="under-construction"><span class="header-section-number">15.1</span> Under Construction</h2>
-<p>This chapter is currently being drafted.</p>
+<section id="ii.-electional-protocols-the-selection-algorithm" class="level2" data-number="15.1">
+<h2 data-number="15.1" class="anchored" data-anchor-id="ii.-electional-protocols-the-selection-algorithm"><span class="header-section-number">15.1</span> II. Electional Protocols: The Selection Algorithm</h2>
+<section id="input-parameters-required" class="level3" data-number="15.1.1">
+<h3 data-number="15.1.1" class="anchored" data-anchor-id="input-parameters-required"><span class="header-section-number">15.1.1</span> Input Parameters Required</h3>
+<ol type="1">
+<li><strong>Statement of Intent</strong> — Clear one-sentence description (e.g., “Begin a new business”)</li>
+<li><strong>Time Window</strong> — Specific dates and hours available</li>
+<li><strong>External Constraints</strong> — Appointments, legal requirements, personal obligations</li>
+</ol>
+</section>
+<section id="the-twelve-step-selection-algorithm" class="level3" data-number="15.1.2">
+<h3 data-number="15.1.2" class="anchored" data-anchor-id="the-twelve-step-selection-algorithm"><span class="header-section-number">15.1.2</span> The Twelve-Step Selection Algorithm</h3>
+<section id="step-1-establish-significators" class="level4" data-number="15.1.2.1">
+<h4 data-number="15.1.2.1" class="anchored" data-anchor-id="step-1-establish-significators"><span class="header-section-number">15.1.2.1</span> Step 1: Establish Significators</h4>
+<table class="caption-top table">
+<thead>
+<tr class="header">
+<th>Event Type</th>
+<th>Primary Significator</th>
+<th>Master Significators</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Business launch</td>
+<td>10th house ruler, Sun</td>
+<td>Ascendant ruler, Moon</td>
+</tr>
+<tr class="even">
+<td>Marriage</td>
+<td>7th house ruler, Venus</td>
+<td>Ascendant ruler, Moon</td>
+</tr>
+<tr class="odd">
+<td>Medical procedure</td>
+<td>6th house ruler</td>
+<td>Ascendant ruler, Moon</td>
+</tr>
+<tr class="even">
+<td>Legal action</td>
+<td>9th house ruler, Jupiter</td>
+<td>Ascendant ruler, Moon</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="step-2-filter-by-lunar-phase" class="level4" data-number="15.1.2.2">
+<h4 data-number="15.1.2.2" class="anchored" data-anchor-id="step-2-filter-by-lunar-phase"><span class="header-section-number">15.1.2.2</span> Step 2: Filter by Lunar Phase</h4>
+<table class="caption-top table">
+<thead>
+<tr class="header">
+<th>Event Type</th>
+<th>Preferred Phase</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Growth, initiation, establishment</td>
+<td>Waxing (New → Full)</td>
+</tr>
+<tr class="even">
+<td>Completion, release, dissolution</td>
+<td>Waning (Full → New)</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="step-3-eliminate-void-of-course-moon" class="level4" data-number="15.1.2.3">
+<h4 data-number="15.1.2.3" class="anchored" data-anchor-id="step-3-eliminate-void-of-course-moon"><span class="header-section-number">15.1.2.3</span> Step 3: Eliminate Void-of-Course Moon</h4>
+<p>Calculate when Moon perfects its last major aspect before leaving its sign. Eliminate these periods (typically 2-6 hours/day).</p>
+</section>
+<section id="step-4-check-retrograde-status" class="level4" data-number="15.1.2.4">
+<h4 data-number="15.1.2.4" class="anchored" data-anchor-id="step-4-check-retrograde-status"><span class="header-section-number">15.1.2.4</span> Step 4: Check Retrograde Status</h4>
+<table class="caption-top table">
+<thead>
+<tr class="header">
+<th>Event Type</th>
+<th>Avoid Retrograde</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Contracts, communication</td>
+<td>Mercury</td>
+</tr>
+<tr class="even">
+<td>Relationships, finances</td>
+<td>Venus</td>
+</tr>
+<tr class="odd">
+<td>Action, competition</td>
+<td>Mars</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="step-5-evaluate-significator-dignity" class="level4" data-number="15.1.2.5">
+<h4 data-number="15.1.2.5" class="anchored" data-anchor-id="step-5-evaluate-significator-dignity"><span class="header-section-number">15.1.2.5</span> Step 5: Evaluate Significator Dignity</h4>
+<p>Identify times when primary significator occupies essential dignity (domicile, exaltation).</p>
+</section>
+<section id="step-6-assess-angular-placement" class="level4" data-number="15.1.2.6">
+<h4 data-number="15.1.2.6" class="anchored" data-anchor-id="step-6-assess-angular-placement"><span class="header-section-number">15.1.2.6</span> Step 6: Assess Angular Placement</h4>
+<p>Rank times when primary significator occupies angular houses (1st, 4th, 7th, 10th) higher.</p>
+</section>
+<section id="step-7-examine-ascendant-aspects" class="level4" data-number="15.1.2.7">
+<h4 data-number="15.1.2.7" class="anchored" data-anchor-id="step-7-examine-ascendant-aspects"><span class="header-section-number">15.1.2.7</span> Step 7: Examine Ascendant Aspects</h4>
+<table class="caption-top table">
+<thead>
+<tr class="header">
+<th>Configuration</th>
+<th>Ranking</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Jupiter/Venus conjunct or sextile Ascendant</td>
+<td>Optimal</td>
+</tr>
+<tr class="even">
+<td>No aspects to Ascendant</td>
+<td>Neutral</td>
+</tr>
+<tr class="odd">
+<td>Saturn/Mars square or conjunct Ascendant</td>
+<td>Suboptimal</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="step-8-evaluate-moons-aspects-to-significator" class="level4" data-number="15.1.2.8">
+<h4 data-number="15.1.2.8" class="anchored" data-anchor-id="step-8-evaluate-moons-aspects-to-significator"><span class="header-section-number">15.1.2.8</span> Step 8: Evaluate Moon’s Aspects to Significator</h4>
+<p>Moon applying to significator by trine/sextile/conjunction = Most favorable</p>
+</section>
+<section id="step-9-check-sect-compatibility" class="level4" data-number="15.1.2.9">
+<h4 data-number="15.1.2.9" class="anchored" data-anchor-id="step-9-check-sect-compatibility"><span class="header-section-number">15.1.2.9</span> Step 9: Check Sect Compatibility</h4>
+<ul>
+<li><strong>Diurnal charts:</strong> Jupiter and Mars above horizon preferred</li>
+<li><strong>Nocturnal charts:</strong> Venus and Mars below horizon preferred</li>
+</ul>
+</section>
+<section id="step-10-evaluate-part-of-fortune" class="level4" data-number="15.1.2.10">
+<h4 data-number="15.1.2.10" class="anchored" data-anchor-id="step-10-evaluate-part-of-fortune"><span class="header-section-number">15.1.2.10</span> Step 10: Evaluate Part of Fortune</h4>
+<p>Ideally angular with well-placed, unafflicted ruler.</p>
+</section>
+<section id="step-11-assess-luminary-dignities" class="level4" data-number="15.1.2.11">
+<h4 data-number="15.1.2.11" class="anchored" data-anchor-id="step-11-assess-luminary-dignities"><span class="header-section-number">15.1.2.11</span> Step 11: Assess Luminary Dignities</h4>
+<p>Check Sun (day charts) or Moon (night charts) for essential dignity.</p>
+</section>
+<section id="step-12-synthesize-composite-score" class="level4" data-number="15.1.2.12">
+<h4 data-number="15.1.2.12" class="anchored" data-anchor-id="step-12-synthesize-composite-score"><span class="header-section-number">15.1.2.12</span> Step 12: Synthesize Composite Score</h4>
+<table class="caption-top table">
+<thead>
+<tr class="header">
+<th>Factor</th>
+<th>Weight</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Significator dignity</td>
+<td>20%</td>
+</tr>
+<tr class="even">
+<td>Ascendant ruler condition</td>
+<td>20%</td>
+</tr>
+<tr class="odd">
+<td>Angular placements</td>
+<td>15%</td>
+</tr>
+<tr class="even">
+<td>Moon aspects</td>
+<td>15%</td>
+</tr>
+<tr class="odd">
+<td>Benefic transits</td>
+<td>10%</td>
+</tr>
+<tr class="even">
+<td>Part of Fortune</td>
+<td>10%</td>
+</tr>
+<tr class="odd">
+<td>Luminaries</td>
+<td>10%</td>
+</tr>
+</tbody>
+</table>
+</section>
+</section>
+<section id="output-format" class="level3" data-number="15.1.3">
+<h3 data-number="15.1.3" class="anchored" data-anchor-id="output-format"><span class="header-section-number">15.1.3</span> Output Format</h3>
+<p>Present 3-5 optimal time windows ranked by composite score, with explanatory rationale for each.</p>
+<hr>
 
 
+</section>
 </section>
 
 </main> <!-- /main -->
@@ -746,8 +940,8 @@ ul.task-list li input[type="checkbox"] {
   </script>
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
-      <a href="../../volumes/vol5-applied/22-natal.html" class="pagination-link" aria-label="Natal Practice">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Natal Practice</span></span>
+      <a href="../../volumes/vol5-applied/22-natal.html" class="pagination-link" aria-label="Advanced Natal and Synastry">
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">14</span>&nbsp; <span class="chapter-title">Advanced Natal and Synastry</span></span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
